component: generic resolver interface, with cacheable, caching, cache implementations