@@ -7,6 +7,7 @@ import static java.nio.file.StandardCopyOption.REPLACE_EXISTING
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'maven-publish'
+apply plugin: 'com.adarshr.test-logger'
 
 // ===========================================================================
 // plugin info
@@ -34,6 +35,7 @@ buildscript {
 
     dependencies {
         classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
+        classpath 'com.adarshr:gradle-test-logger-plugin:3.2.0'
     }
 }
 
@@ -65,6 +67,11 @@ dependencies {
 
     elasticsearch fileTree(dir: 'local_libs', include: ["*.jar"])
     implementation fileTree(dir: LOGSTASH_CORE_PATH, include: "build/libs/logstash-core.jar")
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.1.1'
+    testImplementation 'org.hamcrest:hamcrest-library:2.2'
 
     testImplementation 'org.jruby:jruby-complete:9.3.9.0'
 }
@@ -183,6 +190,23 @@ task generateGemJarRequiresFile {
             w << "require_jar(\'${project.group}\', \'${project.name}\', \'${project.version}\')\n"
         }
     }
+}
+
+test {
+    useJUnitPlatform()
+}
+
+tasks.withType(Test) {
+    // Add Exports to enable tests to run in JDK17
+    jvmArgs = [
+            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED"
+    ]
 }
 
 task vendor(dependsOn: shadowJar) {
